@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 6, 2011</p>
+      <p>Last Updated: March 7, 2011</p>
     </td>
   </tr>
 </table>
@@ -2154,6 +2154,8 @@ nuttx-5.19 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       reported by Uros Platise).
     * drivers/mtd/ramtron.c -  Driver for SPI-based RAMTRON NVRAM devices FM25V10
       (and others).  Contributed by Uros Platise.
+    * examples/nsh and tools/mkromfsimg.sh -- Add support for platform-specific
+      ROMFS-based NSH start-up scripts.
 
 pascal-2.1 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
